Final modification